gitops/external-gateway/gateway-mtls.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway-mtls
spec:
  gatewayClassName: gwclass-external
  listeners:
  - &mtls
    hostname: echo.mtls.buc.sh
    name: echo
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: cert-cloud-buc-sh
      # Not yet supported in envoy-gateway: v1.5.4
      # frontendValidation:
      #   caCertificateRefs:
      #   - kind: "Secret"
      #     group: ""
      #     name: "root-ca-mtls"
    allowedRoutes:
      namespaces:
        from: All
  
  # TODO: When Adding a mTLS listener, you must also add the geoip-HTTP-Filter to that HTTP-FilterChain in policy.yaml
  #    And Add it to the NetworkPolicy in network-policy.yaml
  - <<: *mtls
    hostname: cams.mtls.buc.sh
    name: frigate
  - <<: *mtls
    hostname: paperless.mtls.buc.sh
    name: paperless
  - <<: *mtls
    hostname: homeassistant.mtls.buc.sh
    name: homeassistant
  - <<: *mtls
    hostname: photos.mtls.buc.sh
    name: photos
