gitops/external-gateway/debug-combined-mtls.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-mtls-combined
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    sectionName: sec
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    sectionName: secmtls
    
  hostnames:
  - "echo.cloud.buc.sh"
  - "echo.mtls.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backend
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
