gitops/external-gateway/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-external-gateway-from-accessing-the-internal-network
  namespace: external-gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
      app.kubernetes.io/name: envoy
      gateway.envoyproxy.io/owning-gatewayclass: gwclass-external
  policyTypes:
    - Egress
    - Ingress
  egress:
  # Allow DNS
  - to:
    - ipBlock:
        cidr: 10.0.0.16/32
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  # Monitoring (traces)
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
  # Ingress Routes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-gateway
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-hfs
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: external-homelabapi
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ntfy
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: paperless
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: matrix
  # Frigate
  - to:
    - ipBlock:
        cidr: 10.0.0.9/32
    ports:
    - port: 8971
      protocol: TCP
      
  ingress:
  # Allow all ingress traffic
  - {}
